--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -1,5 +1,5 @@
 SRCS = ft_printf.c ft_putchar.c ft_putstr.c ft_putnbr.c ft_putnbr_unsigned.c \
-	ft_putnbr_base.c ft_hexa_lower.c ft_hexa_upper.c ft_address.c
+	ft_putnbr_base.c ft_hexa_lower.c ft_hexa_upper.c ft_address.c ft_check.c
 
 OBJS = $(SRCS:.c=.o)
 CC = cc
